// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DesignSystem - tokens 1`] = `
Object {
  "breakpoint.big": "40",
  "breakpoint.small": "40",
  "focus": "white 0px 0px 0px 1px, 0px 0px 2px 3px black",
  "font.fontSize.l": 22,
  "font.fontSize.m": 16,
  "font.fontSize.s": 13,
  "font.lineHeight.dense": 1.25,
  "font.lineHeight.none": 1.12,
  "font.lineHeight.normal": 1.375,
  "palette.red50": "red50",
  "space.l": 20,
  "space.m": 16,
  "space.s": 12,
  Symbol(original): Object {
    "breakpoint.big": "40",
    "breakpoint.small": "40",
    "focus": "white 0px 0px 0px 1px, 0px 0px 2px 3px black",
    "font.fontSize.l": 22,
    "font.fontSize.m": 16,
    "font.fontSize.s": 13,
    "font.lineHeight.dense": 1.25,
    "font.lineHeight.none": 1.12,
    "font.lineHeight.normal": 1.375,
    "palette.red50": "red50",
    "space.l": 20,
    "space.m": 16,
    "space.s": 12,
  },
}
`;

exports[`DesignSystem - tokens with brandToken object 1`] = `
Object {
  "breakpoint.big": "40",
  "breakpoint.small": "40",
  "focus": "white 0px 0px 0px 1px, 0px 0px 2px 3px black",
  "font.fontSize.l": 22,
  "font.fontSize.m": 16,
  "font.fontSize.s": 13,
  "font.lineHeight.dense": 1.25,
  "font.lineHeight.none": 1.12,
  "font.lineHeight.normal": 1.375,
  "palette.red50": "red50",
  "primary": "red",
  "secondary": "red50",
  "space.l": 20,
  "space.m": 16,
  "space.s": 12,
  Symbol(original): Object {
    "breakpoint.big": "40",
    "breakpoint.small": "40",
    "focus": "white 0px 0px 0px 1px, 0px 0px 2px 3px black",
    "font.fontSize.l": 22,
    "font.fontSize.m": 16,
    "font.fontSize.s": 13,
    "font.lineHeight.dense": 1.25,
    "font.lineHeight.none": 1.12,
    "font.lineHeight.normal": 1.375,
    "palette.red50": "red50",
    "primary": "red",
    "secondary": "palette.red50",
    "space.l": 20,
    "space.m": 16,
    "space.s": 12,
  },
}
`;
